<resources>
    <string name="app_name">TicketToRide</string>

    <string name="username">User Name: </string>
    <string name="password">Password: </string>
    <string name="confirm_password">Confirm Password: </string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="username_hint"><font size="8">No more than 10 characters</font></string>
    <string name="password_hint"><font size="8">Must be at least 6 characters</font></string>
    <string name="confirm_password_hint"><font size="8">Must match password</font></string>

    <string name="game_id">#</string>
    <string name="game_name">Name</string>
    <string name="game_players">Players</string>
    <string name="players_in_game">In Game</string>
    <string name="create_game_button">Create Game</string>
    <string name="join_game_button">Join Game</string>

    <string name="create_new_game_header">Create New Game</string>
    <string name="name_of_game_title">Name: </string>
    <string name="num_players_title">Players: </string>
    <string name="color_title">Your Color: </string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string-array name="num_players">
        <item><font color="#6AACFF">2</font></item>
        <item><font color="#6AACFF">3</font></item>
        <item><font color="#6AACFF">4</font></item>
        <item><font color="#6AACFF">5</font></item>
    </string-array>
    <string name="red_player">Red</string>
    <string name="blue_player">Blue</string>
    <string name="yellow_player">Yellow</string>
    <string name="green_player">Green</string>
    <string name="black_player">Black</string>

    <string name="menu_stats_title">Player Stats</string>
    <string name="menu_history_title">Game History</string>
    <string name="menu_chat_title">Chat</string>
    <string name="menu_turn_title">Player Turns</string>
    <string name="menu_destinations">Destinations</string>

    <string name="draw_train_car_card">Draw Trains</string>
    <string name="place_trains">Place Trains</string>
    <string name="draw_routes">Draw Routes</string>

    <string name="send_button">Send</string>

    <string name="bank_title">BANK</string>

    <string name="choose_button">Choose</string>

    <string name="close_button">Close</string>
    <string name="close_out_button">X</string>

    <string name="stats_player">Player</string>
    <string name="stats_points">Points</string>
    <string name="stats_num_trains">Trains</string>
    <string name="stats_num_train_cards">Train Cards</string>
    <string name="stats_num_dest_cards">Dest Cards</string>
    <string name="routes_owned_title">Routes Owned</string>

    <string name="destination_cards_title">Destination Cards</string>
    <string name="game_history_title">Game History</string>


    <string name="game_over">Game Over!</string>
    <string name="player_wins">"Player" Wins!</string>
    <string name="player_game_overview">\n\nPlayer</string>
    <string name="claimed_route_points">Claimed Route Points</string>
    <string name="longest_route_points">Longest Route Points</string>
    <string name="reached_destination_points">Reached Destination Points</string>
    <string name="unreached_destination_points">Unreached Destination Points</string>
    <string name="total_number_points">Total Number Points</string>
    <string name="quit_game">Quit Game</string>

    <string name="last_turn">Last Turn</string>

    <string name="server_down">The server is currently down. We apologize for the inconvenience.</string>

</resources>
