<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_turn"
        android:icon="@drawable/ic_menu_turn"
        android:title="@string/menu_turn_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_chat"
        android:icon="@drawable/ic_menu_chat"
        android:title="@string/menu_chat_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_menu_history"
        android:title="@string/menu_history_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_stats"
        android:icon="@drawable/ic_menu_stats"
        android:title="@string/menu_stats_title"
        app:showAsAction="always"/>

</menu>