<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lobby"
    android:id="@+id/game_waiting_lobby_fragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:id="@+id/game_waiting_lobby_layout">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="3"
            android:background="@color/gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_id"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_name"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/game_players"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/players_in_game"
                android:textColor="@color/white"/>

        </GridLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:id="@+id/game_list_recycler_view"
            android:background="@color/transparent_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/gray">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_game_button"
                android:id="@+id/create_game_button"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/join_game_button"
                android:id="@+id/join_game_button"/>
        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@id/fragment_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    </FrameLayout>

</RelativeLayout>
