<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@drawable/stats_background"
    android:id="@+id/game_overview_fragment"
    tools:context="views_and_presenters.GameOverviewFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_over"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/black">

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_wins"
            android:textColor="@color/green"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:id="@+id/player_wins_text_view"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:id="@+id/game_overview_player_column_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/player_game_overview"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:id="@+id/game_overview_claimed_route_points_column_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/claimed_route_points"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:id="@+id/game_overview_longest_route_points_column_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longest_route_points"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:id="@+id/game_overview_reached_destination_points_column_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reached_destination_points"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:id="@+id/game_overview_unreached_destination_points_column_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unreached_destination_points"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:id="@+id/game_overview_total_num_points_column_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_number_points"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/quit_game"
            android:id="@+id/quit_game_button"/>

    </LinearLayout>

</LinearLayout>
