<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:orientation="horizontal"
        android:background="@drawable/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:background="@color/light_blue"
            android:text="IP ADDRESS: "/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ip_address_edit_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_red">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/menu_border"
                android:orientation="vertical"
                android:layout_centerInParent="true">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:rowCount="3"
                    android:columnCount="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="100dp">

                        <TextView
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textColor="@color/black"
                            android:layout_marginTop="5dp"/>

                        <EditText
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/login_username_edit_text"
                            android:layout_marginTop="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="20dp">

                        <TextView
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textColor="@color/black"
                            android:layout_marginTop="5dp"/>

                        <EditText
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:inputType="textMultiLine"
                            android:textColor="@color/black"
                            android:hint="@string/username_hint"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/register_username_edit_text"
                            android:layout_marginTop="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="100dp">

                        <TextView
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:textColor="@color/black"/>

                        <EditText
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:inputType="textPassword|textMultiLine"
                            android:textColor="@color/black"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/login_password_edit_text"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="-15dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/password"
                                android:textColor="@color/black"/>

                            <EditText
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:inputType="textPassword|textMultiLine"
                                android:hint="@string/password_hint"
                                android:textColor="@color/black"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/register_password_edit_text"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="-15dp">


                            <TextView
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/confirm_password"
                                android:textColor="@color/black"/>

                            <EditText
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:inputType="textPassword|textMultiLine"
                                android:hint="@string/confirm_password_hint"
                                android:textColor="@color/black"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/register_confirm_password_edit_text"
                                />

                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="-10dp"
                        android:text="@string/login_button"
                        android:id="@+id/login_button"
                        android:enabled="false"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="-10dp"
                        android:text="@string/register_button"
                        android:id="@+id/register_button"
                        android:enabled="false"/>

                </GridLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
